# xml-scoring

./: LICENSE  README.md  blended_dataset.parquet  dataset.ipynb  model_npv_pd.py  models.ipynb  pyproject.toml  utils.py
data/: Dataset_D.csv  blended_dataset.parquet
