[tool.poetry]
name = "xml-scoring"
version = "0.1.0"
description = "Explainability in Credit Risk Machine Learning"
authors = ["D. Burakov <dennyemb@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "2.0.3"
scikit-learn = "1.3.0"
xgboost = "1.7.6"
pyarrow = "12.0.1"
numpy = "1.23.5"
shap = "0.42.1"
matplotlib = "3.7.2"
optbinning = "0.17.3"
optuna = "3.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
